--- a/ToDo
+++ b/ToDo
@@ -3,3 +3,4 @@
 - Сделать отображение выбранной картинки в интерфейсе и истории
 - Добавить обработку, когда мы входим с несуществующими данными
 - Сделать navigation bar для истории и дашборда
+- Добавить анимацию появления результатов анализа
