feat: Сделал Drag and Drop, Добавил превью изображения, поменял кнопки

--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,6 @@
-- Сделать отображение выбранной картинки в интерфейсе и истории
 - Добавить обработку, когда мы входим с несуществующими данными
-- Сделать navigation bar для истории и дашборда
-- Добавить анимацию появления результатов анализа
+- Перевести на русский язык
+- Сделать скроллбар в истории более красивым
+- Сделать однообразным отображение трещин в истории
+- Разобраться, почему в истории не виден верх таблицы
+- В истории округлить значения прочности
